--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+	"scripts": {
+		"start": "bun run index.ts",
+		"check": "tsc --noEmit",
+		"check:watch": "tsc --noEmit --watch"
+
+	},
   "devDependencies": {
     "@types/bun": "latest",
     "@types/papaparse": "^5.3.15"
